fix footer to be fixed but not to overlap

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,4 +4,5 @@
     bottom: 0;
     width: 100%;
     background-color: lightsteelblue;
+    height: 60px; /* margin-bottom on main should correspond or be bigger, to avoid overlap*/
   }
